--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^5.0.4",
-    "prettier": "^1.18.2",
+    "eslint": "^7.18.0",
     "ts-loader": "^6.1.2",
     "typescript": "^3.6.3",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.11.2"
   },
-  "dependencies": {
-    "dat.gui": "^0.7.6"
-  }
+  "dependencies": {}
 }
